# zerosum

./: .gitignore  LICENSE  README.md  pyproject.toml
blood/: _preflop.py  basic.py  h2a60b.py  h2a60p.py  h8a10d30o.py  h8a10o.py  h8a20b.py  h8a20d30p.py  h8a20p.py  h8a20p3a20d30p.py  h8a20p3a5d10o.py  h8a20p3a5d10p.py  h8a30p.py  h8a5o.py  h8a5p8a5d10o.py  h8a60d30o.py  h8a60d30p.py  ochs.py  ochs10.py  p8f1a10o.py  p8f1a20d30o.py  p8f1a20d30p.py  p8f1a20o.py  p8f1a30d30o.py  p8f1a30d50p.py  p8f1a5d50o.py  p8f1a5l.py  p8f1a5o.py  preflop.py  spes.py  spes10.py  spes40.py  spes40acc.py  spes80.py  spes80acc.py  spesh8a20d30p.py  spesnova.py  spesnova10.py  spesnova20.py  spesnova40.py  (+2 more)
centroids/: 0-20-30.pkl  0-8-10.pkl  3-20-30.pkl  4-20-30.pkl  5-20-30.pkl  6-20-30.pkl  7-20-30.pkl  8-20-30.pkl  9-20-30.pkl
notebooks/: Abstraction.ipynb  Ascending Auction.ipynb  Auction.ipynb  Bluffing.ipynb  CFR.ipynb  Hand Strength.ipynb  Learning to learn.ipynb  Nash Bargaining.ipynb  Opponent Hand Strength.ipynb  Potential aware.ipynb  Potential.ipynb  Preflop.ipynb  River of Blood V1.ipynb  River of Blood V2.ipynb  River of Blood.ipynb  Rounds.ipynb  Signaling.ipynb  Subgame.ipynb  Thompson.ipynb
scripts/: hands.py  mades.py  ochs.py  play.py  potentials.py  range.py  tournament.py  train.py
src/: game.py
src/cfr/: escfr.py  game.py
src/cfr/kuhn/: game.py
src/cfr/pkr/: game.py
src/cfr/rps/: game.py
src/cfrpp/: Makefile  do  escfr.cpp  main.cpp  poker.cpp  strength.cpp  strength.h
src/cfrpp/implementC/: algo.cpp  cfr.cpp
src/cfrpp/pokerlib/: Makefile  allfive  allfive.c  arrays.h  (+2 more)
src/cfrpy/: abstraction.py  cfr.py  cfrplus.cpp  cfrplus.py  escfr.py  game.py
src/zerosum/: __init__.py  abstraction.py  game.py  normal.py  strategy.py
(+38 files in other folders)
